# IL2CPPModLoader

./: .gitignore  README.md
Managed/: Managed.sln
Managed/DotNetHoster/DotNetHoster/: DotNetHoster.csproj  Hoster.cs
Managed/EntryPoint/: DotNet.cs  EntryPoint.cs  EntryPoint.csproj  EntryPoint.sln  Reflection.cs
Managed/EntryPoint/EntryPoint/: Class1.cs
Managed/ModLoader/: ModLoader.csproj
Managed/ModLoader/ModLoader/: AssetManager.cs  Dobby.cs  Enviornment.cs  Il2CppAssemblyGenerator.cs  ModLoader.cs  ModPlugin.cs  Module.cs
Managed/WorldBoxCompatibilityModule/: Core.cs  WorldBoxCompatibilityModule.csproj  WrappedPlugin.cs
Native/Android/dotnet/: runtimeconfig.json
Native/Android/dotnet/shared/Microsoft.NETCore.App/8.0.6/: RuntimeComponentManifest.json
Native/Android/libDotNetPlugin/: CMakeLists.txt  assetmanager.cpp  dotnet.cpp  library.cpp  library.h
Native/IL2CPP/DotNetHoster/: DotNetHoster.sln
Native/IL2CPP/DotNetHoster/DotNetHoster/: Core.cs  DotNet.asmdef  DotNetHoster.csproj  Functions.cs  Hoster.cs  System.cs  Utilities.cs
Native/IL2CPP/DotNetHoster/DotNetHoster/Interop/: Functions.cs  Interop.cs  MonoObject.cs  System.cs
Native/IL2CPP/DotNetHoster/DotNetHoster/Interop/Reflection/: MonoAssembly.cs  MonoMethod.cs  MonoType.cs
Native/libDotNetPlugin/: CMakeLists.txt  assetmanager.cpp  dotnet.cpp  dotnet_android.cpp  dotnet_ios.cpp  shared.cpp
Native/libDotNetPlugin/lib/android-arm64/dotnet/shared/Microsoft.NETCore.App/8.0.6/: Microsoft.NETCore.App.deps.json
Native/libDotNetPlugin/lib/ios-arm64/dotnet/: Info.plist  coreclr.js  libSystem.IO.Compression.Native.dylib  libSystem.Native.dylib  libclrjit.dylib  libhostfxr.dylib  libmscordaccore.dylib  libmscordbi.dylib
Native/libDotNetPlugin/lib/ios-arm64/dotnet/shared/Microsoft.NETCore.App/10.0/: libSystem.Globalization.Native.dylib  libSystem.Security.Cryptography.Native.Apple.dylib
Native/libDotNetPlugin/lib/ios-arm64/dotnet/shared/Microsoft.NETCore.App/10.0.0/: libSystem.Net.Security.Native.dylib  libhostpolicy.dylib  libnethost.dylib
